--- a/V1/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/V1/ProAgil-App/src/app/eventos/eventos.component.html
@@ -81,3 +81,117 @@
   This is a modal.
 </div>
 </ng-template>
+
+<form [formGroup]="registerForm">
+    <div class="form-row">
+        <div class="form-group col-md-12">
+            <label>Tema</label>
+            <input type="text" class="form-control"
+                [ngClass]="{'is-invalid': registerForm.get('tema')?.errors && registerForm.get('tema')?.touched}"
+                formControlName="tema" placeholder="Tema">
+            <div *ngIf="registerForm.get('tema')?.hasError('required') && registerForm.get('tema')?.touched"
+                class="invalid-feedback">
+                O tema é obrigatório.
+            </div>
+            <div *ngIf="registerForm.get('tema')?.hasError('minlength') && registerForm.get('tema')?.touched"
+                class="invalid-feedback">
+                O tema deve ter no mínimo 4 caracteres.
+            </div>
+            <div *ngIf="registerForm.get('tema')?.hasError('maxlength') && registerForm.get('tema')?.touched"
+                class="invalid-feedback">
+                O tema deve ter no máximo 50 caracteres.
+            </div>
+        </div>
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-8">
+            <label>Local</label>
+            <input type="text" class="form-control"
+                [ngClass]="{'is-invalid': registerForm.get('local')?.errors && registerForm.get('local')?.touched}"
+                formControlName="local" placeholder="Local">
+            <div *ngIf="registerForm.get('local')?.hasError('required') && registerForm.get('local')?.touched"
+                class="invalid-feedback">
+                O local é obrigatório.
+            </div>
+        </div>
+        <div class="form-group col-md-4">
+            <label>Data e Hora</label>
+            <input type="text" class="form-control"
+                bsDatepicker
+                [bsConfig]="{ dateInputFormat : 'DD/MM/YYYY hh:mm: a' }"
+                [ngClass]="{'is-invalid': registerForm.get('dataEvento')?.errors && registerForm.get('dataEvento')?.touched}"
+                formControlName="dataEvento" placeholder="Data do Evento">
+            <div *ngIf="registerForm.get('dataEvento')?.hasError('required') && registerForm.get('dataEvento')?.touched"
+                class="invalid-feedback">
+                A data e hora é obrigatória.
+            </div>
+        </div>
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-3">
+            <label>Qtd Pessoas</label>
+            <input type="text" class="form-control"
+                [ngClass]="{'is-invalid': registerForm.get('qtdPessoas')?.errors && registerForm.get('qtdPessoas')?.touched}"
+                formControlName="qtdPessoas" placeholder="Quantidade de pessoas">
+            <div *ngIf="registerForm.get('qtdPessoas')?.hasError('required') && registerForm.get('qtdPessoas')?.touched"
+                class="invalid-feedback">
+                A quantidade é obrigatório.
+            </div>
+            <div *ngIf="registerForm.get('qtdPessoas')?.hasError('max') && registerForm.get('qtdPessoas')?.touched"
+                class="invalid-feedback">
+                A quantidade deve ser menor que 120000
+            </div>
+        </div>
+        <div class="form-group col-md-9">
+            <label>Imagem</label>
+            <input type="text" class="form-control"
+                [ngClass]="{'is-invalid': registerForm.get('imagemUrl')?.errors && registerForm.get('imagemUrl')?.touched}"
+                formControlName="imagemUrl" placeholder="Imagem">
+            <div *ngIf="registerForm.get('imagemUrl')?.hasError('required') && registerForm.get('imagemUrl')?.touched"
+                class="invalid-feedback">
+                A imagem é obrigatória.
+            </div>
+        </div>
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-4">
+            <label>Telefone</label>
+            <input type="text" class="form-control"
+                [ngClass]="{'is-invalid': registerForm.get('telefone')?.errors && registerForm.get('telefone')?.touched}"
+                formControlName="telefone" placeholder="Telefone">
+            <div *ngIf="registerForm.get('telefone')?.hasError('required') && registerForm.get('telefone')?.touched"
+                class="invalid-feedback">
+                O telefone é obrigatório.
+            </div>
+        </div>
+        <div class="form-group col-md-8">
+            <label>Email</label>
+            <input type="text" class="form-control"
+                [ngClass]="{'is-invalid': registerForm.get('email')?.errors && registerForm.get('email')?.touched}"
+                formControlName="email" placeholder="Email">
+            <div *ngIf="registerForm.get('email')?.hasError('required') && registerForm.get('email')?.touched"
+                class="invalid-feedback">
+                O e-mail é obrigatório.
+            </div>
+            <div *ngIf="registerForm.get('email')?.hasError('email') && registerForm.get('email')?.touched"
+                class="invalid-feedback">
+                Deve ser um e-mail válido.
+            </div>
+        </div>
+    </div>
+</form>
+<br>
+<button class="btn btn-secondary" (click)="openModal(template)">
+  Fechar
+</button>
+<button class="btn btn-primary" [disabled]="!registerForm.valid" (click)="salvarAlteracao()">
+  Salvar Alterações
+</button>
+<br>
+<br>
+<p>Form Value: {{ registerForm.value | json }}</p>
+<p>Form Status: {{ registerForm.status | json }}</p>
+
