--- a/V1/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/V1/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,13 +1,13 @@
 <div class="d-flex">
-  <div class="form-inline mr-auto">
-    <div class="form-group mb-2">
+  <div class="form-inline p-2 w-100" >
+    <div class="form-group mb-2" >
       <label class="mr-2">Filtro:</label>
       <input type="text" class="form-control mr-2" placeholder="buscar"
       [(ngModel)]="filtroLista"
       >
     </div>
   </div>
-  <div>
+  <div class="p-2 flex-shrink-1 bd-highlight">
     <button class="btn btn-outline-primary" (click)="novoEvento(template)">
       <i class="fa fa-plus-circle"></i>&nbsp;
       Novo Evento
@@ -70,7 +70,7 @@
       </td>
     </tr>
   </tbody>
-  <tfoot *ngIf="!eventos.length">
+  <tfoot *ngIf="!eventos">
     <tr>
       <td colspan="7" class="text-center">
         <h3>Nenhum evento encontrado</h3>
@@ -127,7 +127,9 @@
                   <label>Data e Hora</label>
                   <input type="text" class="form-control"
                       bsDatepicker
-                      [bsConfig]="{ dateInputFormat : 'DD/MM/YYYY hh:mm: a' }"
+                      value="{{dataEvento | DateTimeFormatPipe}}"
+                      [(ngModel)]="dataEvento"
+                      [bsConfig]="{ dateInputFormat : 'DD/MM/YYYY hh:mm' }"
                       [ngClass]="{'is-invalid': registerForm.get('dataEvento')?.errors && registerForm.get('dataEvento')?.touched}"
                       formControlName="dataEvento" placeholder="Data do Evento">
                   <div *ngIf="registerForm.get('dataEvento')?.hasError('required') && registerForm.get('dataEvento')?.touched"
