--- a/V1/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/V1/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,3 +1,5 @@
+<app-titulo [titulo]="titulo"></app-titulo>
+
 <div class="d-flex">
   <div class="form-inline p-2 w-100" >
     <div class="form-group mb-2" >
