--- a/V1/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/V1/ProAgil-App/src/app/eventos/eventos.component.html
@@ -41,7 +41,7 @@
     <tr *ngFor="let evento of eventosFiltrados" >
       <td>
         <img *ngIf="mostrarImagem"
-          src="http://localhost:5000/img/{{ evento.imagemUrl }}"
+          src="http://localhost:5000/resources/images/{{ evento.imagemUrl }}"
           [style.width.px]="imagemLargura"
           [style.margin.px]="imagemMargem"
         >
@@ -158,9 +158,18 @@
               </div>
               <div class="form-group col-md-9">
                   <label>Imagem</label>
-                  <input type="text" class="form-control"
-                      [ngClass]="{'is-invalid': registerForm.get('imagemUrl')?.errors && registerForm.get('imagemUrl')?.touched}"
-                      formControlName="imagemUrl" placeholder="Imagem">
+                  <table>
+                    <tr>
+                      <td>
+                        <button class="btn btn-success" (click)="file.click()">Enviar Imagem</button>
+                        <input type="file" #file class="form-control"
+                            [ngClass]="{'is-invalid': registerForm.get('imagemUrl')?.errors && registerForm.get('imagemUrl')?.touched}"
+                               (change)="onFileChange($event)"
+                            formControlName="imagemUrl" placeholder="Imagem" style="display:none">
+                    </td>
+                  </tr>
+                  </table>
+
                   <div *ngIf="registerForm.get('imagemUrl')?.hasError('required') && registerForm.get('imagemUrl')?.touched"
                       class="invalid-feedback">
                       A imagem é obrigatória.
