--- a/V1/ProAgil-App/src/app/nav/nav.component.html
+++ b/V1/ProAgil-App/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <div *ngIf="loggedIn()" class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="eventos">Eventos</a>
@@ -19,7 +19,7 @@
       </ul>
     </div>
 
-    <ul class="navbar-nav">
+    <ul *ngIf="loggedIn()" class="navbar-nav">
       <li class="nav-item dropdown" dropdown>
           <a dropdownToggle class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -30,7 +30,7 @@
               Perfil
             </a>
             <div role="separator" class="divider"></div>
-            <a class="dropdown-item" href="#">
+            <a class="dropdown-item" (click)="logout()" >
               Sair
             </a>
           </div>
