--- a/V1/ProAgil-App/src/app/nav/nav.component.html
+++ b/V1/ProAgil-App/src/app/nav/nav.component.html
@@ -22,8 +22,8 @@
     <ul *ngIf="loggedIn()" class="navbar-nav">
       <li class="nav-item dropdown" dropdown>
           <a dropdownToggle class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Vinícius
+            aria-haspopup="true" aria-expanded="false" style="cursor: pointer">
+            {{authService.decodeToken?.unique_name}}
           </a>
           <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">
@@ -36,6 +36,8 @@
           </div>
       </li>
     </ul>
+
+    <button *ngIf="!loggedIn()" class="btn btn-success" (click)="entrar()">Entrar</button>
 
   </div>
 </nav>
