--- a/V1/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/V1/ProAgil-App/src/app/eventos/eventos.component.html
@@ -34,7 +34,7 @@
       <th>Data</th>
       <th>Qtd. Pessoas</th>
       <th>Lote</th>
-      <th>Options</th>
+      <th colspan="2">Options</th>
     </tr>
   </thead>
   <tbody *ngIf="eventos && eventos.length">
@@ -69,6 +69,11 @@
             <i class="fa fa-eraser"></i>
           </button>
         </div>
+      </td>
+      <td>
+        <a [routerLink]="['/evento', evento.id, 'edit']" tooltip="Edição Detalhada" class="btn btn-sm btn-warning">
+          <i class="fa fa-edit"></i>
+        </a>
       </td>
     </tr>
   </tbody>
